Fix z-index of about-me section. Change background color of selected text

--- a/src/scss/util/_container-queries.scss
+++ b/src/scss/util/_container-queries.scss
@@ -284,11 +284,10 @@ footer {
       }
 
       div.about-me__container {
-        position: relative;
         margin-block-start: 0;
         width: 87%;
         aspect-ratio: 2 / 1;
-        padding-block-start: 3rem;
+        // padding-block-start: 3rem;
 
         display: grid;
         align-items: center;
@@ -296,15 +295,22 @@ footer {
       }
 
       &__frame {
+        grid-row: 1/2;
+        grid-column: 1/3;
+
         display: block;
-        position: absolute;
+        // position: absolute;
         height: 100%;
         width: 100%;
         stroke-width: 1;
         stroke-dasharray: 0 1;
+        // z-index: 0;
       }
 
       &__text {
+        grid-row: 1/2;
+        grid-column: 2/3;
+
         max-width: 100%;
         margin-inline: auto;
         padding: 1em;
@@ -321,8 +327,11 @@ footer {
     }
 
     .about-me .widget {
-      // height: max-content;
+      grid-row: 1/2;
+      grid-column: 1/2;
+
       margin-inline-start: -3em;
+      // height: max-content;
 
       &__avatar {
         max-width: unset;
